# llvm-examples

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hello.cpp
cmake/: utils.cmake
code-to-act-upon/: for-ex04.cpp  hello.c  hello_with_errors.c  min.c  pp.c  sum-and-dif.c  sum.cpp
example-libclang/: CMakeLists.txt  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp
src/: CMakeLists.txt
src/ir-gen-01/: CMakeLists.txt  gen.cpp
